# obfviewer

./: .gitignore  GPU_ACCELERATION.md  LICENSE  README.md  merger_test.py  obf_viewer.py  obf_viewer_combined.py  pyproject.toml
scripts/: merge_obp.py
scripts/legacy/: README.md  obf_viewer_3d.py  obf_viewer_3d_fast.py  obf_viewer_v1.py
src/obfviewer/: __init__.py  __main__.py  cli.py  combined.py  loaders.py  models.py  utils.py
src/obfviewer/gpu/: __init__.py
src/obfviewer/gui/: __init__.py  app.py  viewer.py
tests/: __init__.py  test_models.py
tests/fixtures/: layer199melt1.obp  layer199melt2.obp  merged.obp
