[project]
name = "obfviewer"
version = "0.1.0"
description = "OBF/OBP build-file viewer for Freemelt powder-bed fusion machines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["OBF", "OBP", "Freemelt", "electron beam", "additive manufacturing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
# NOTE: obplib, obflib, and obanalyser are Freemelt internal libraries not
# published on PyPI.  Install them from your Freemelt distribution before
# installing this package.
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "rich>=10.0.0",
    "protobuf>=3.19.0",
    "PyQt6>=6.4.0",
    "pyvista>=0.38.0",
    "pyvistaqt>=0.9.0",
    "PyOpenGL>=3.1.0",
]

[project.scripts]
obfviewer = "obfviewer.cli:main"
obfviewer-combined = "obfviewer.combined:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
gpu = [
    # Optional GPU-accelerated array processing (NVIDIA / AMD ROCm)
    # Install one of:
    #   pip install cupy-cuda12x   (NVIDIA CUDA 12.x)
    #   pip install cupy-rocm-5-0  (AMD ROCm 5.0)
    "cupy; platform_system != 'unsupported'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obfviewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
